--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "pg": "^8.8.0",
+    "redis": "^4.5.0",
     "uuid": "^9.0.0",
     "xss-clean": "^0.1.1"
   },
